tests/snapshots/examples_fixtures/type_system__failing__116_keyword_alias_end.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/116_keyword_alias_end.flx
== compile ==
failed (parse)
== diagnostics ==
--> compiler error[E076]: UNCLOSED DELIMITER

Expected a closing `}` to match this opening `{` in function `foo`.

  --> examples/type_system/failing/116_keyword_alias_end.flx:1:17
  |
1 | fn foo() -> Int {
  |                 ^

Help:
  Add `}` to close the body of function `foo`.


--> compiler error[E034]: UNEXPECTED TOKEN

`end` is not a keyword in Flux. Use `}` to close blocks.

  --> examples/type_system/failing/116_keyword_alias_end.flx:3:1
  |
3 | end
  | ^^^

Hint:
  Replace `end` with `}`.

Found 2 errors.
== stdout ==
<not executed>
